fix broken style

--- a/src/client/ui/styles.less
+++ b/src/client/ui/styles.less
@@ -330,7 +330,8 @@
         z-index: @rootZIndex - 3;
         left: 0;
         width:100%;
-        display: flex;            
+        display: flex;
+        flex-direction: row;        
         color: rgba(255, 255, 255, 0.8);
         flex-wrap: nowrap;
         font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Helvetica', 'Arial', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji';
@@ -366,6 +367,7 @@
                 width: 100%;
                 align-items: center;
                 display: flex;
+                flex-direction: row;
                 justify-content: space-between;
                 white-space: nowrap;
                 flex: 1;
